--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,16 +9,17 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">3,264</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">1,817</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.dc.datacreator.tests.DataTest</td><td><a href="#m0">createTechtest</a></td><td rowspan="1">1568961579412</td><td rowspan="1">3237</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.dc.datacreator.tests.DCRulesTest</td><td><a href="#m0">eventHovertest</a></td><td rowspan="1">1569407683050</td><td rowspan="1">1791</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.dc.datacreator.tests.DataTest#createTechtest</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.json.JSONException: A JSONObject text must begin with &apos;{&apos; at 0 [character 1 line 1]
+<h2>Default test</h2><h3 id="m0">com.dc.datacreator.tests.DCRulesTest#eventHovertest</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.json.JSONException: A JSONObject text must begin with &apos;{&apos; at 0 [character 1 line 1]
 	at org.json.JSONTokener.syntaxError(JSONTokener.java:505)
 	at org.json.JSONObject.&lt;init&gt;(JSONObject.java:215)
 	at org.json.JSONObject.&lt;init&gt;(JSONObject.java:399)
-	at com.dc.datacreator.lib.RestLib.getObjectRecordID(RestLib.java:122)
-	at com.dc.datacreator.tests.DataTest.createTechtest(DataTest.java:194)
+	at com.dc.datacreator.lib.RestLib.getOauthAccessToken(RestLib.java:75)
+	at com.dc.datacreator.lib.RestLib.getObjectRecordID(RestLib.java:87)
+	at com.dc.datacreator.tests.DCRulesTest.eventHovertest(DCRulesTest.java:29)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
 	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
