--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="82b2fa">  <td>19/09/25 16:04:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DCRulesTest.eventHovertest()[pri:1, instance:com.dc.datacreator.tests.DCRulesTest@2898ac89]">eventHovertest</td> 
-  <td>main@1374754488</td>   <td></td> </tr>
-<tr bgcolor="82b2fa">  <td>19/09/25 16:04:43</td>   <td>-12</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DCRulesTest.initialization()[pri:0, instance:com.dc.datacreator.tests.DCRulesTest@2898ac89]">&gt;&gt;initialization</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1374754488</td>   <td></td> </tr>
+<tr bgcolor="77fd62">  <td>19/10/25 15:54:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.baseStateHome()[pri:0, instance:com.dc.datacreator.tests.PerformanceTest@3cc1435c]">&gt;&gt;baseStateHome</td> 
+<td>&nbsp;</td>  <td>main@1646464088</td>   <td></td> </tr>
+<tr bgcolor="9fedbd">  <td>19/10/25 15:55:15</td>   <td>22981</td> <td>&nbsp;</td><td title="&lt;&lt;BrowserLib.closeBrowser()[pri:0, instance:com.dc.datacreator.tests.PerformanceTest@3cc1435c]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1646464088</td>   <td></td> </tr>
+<tr bgcolor="77fd62">  <td>19/10/25 15:55:15</td>   <td>22978</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeChildBrowser()[pri:0, instance:com.dc.datacreator.tests.PerformanceTest@3cc1435c]">&lt;&lt;closeChildBrowser</td> 
+<td>&nbsp;</td>  <td>main@1646464088</td>   <td></td> </tr>
+<tr bgcolor="9fedbd">  <td>19/10/25 15:54:09</td>   <td>-42766</td> <td>&nbsp;</td><td title="&gt;&gt;BrowserLib.launchBrowser()[pri:0, instance:com.dc.datacreator.tests.PerformanceTest@3cc1435c]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1646464088</td>   <td></td> </tr>
+<tr bgcolor="77fd62">  <td>19/10/25 15:54:23</td>   <td>-29425</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.login()[pri:0, instance:com.dc.datacreator.tests.PerformanceTest@3cc1435c]">&gt;&gt;login</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1646464088</td>   <td></td> </tr>
+<tr bgcolor="77fd62">  <td>19/10/25 15:55:15</td>   <td>22979</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.logout()[pri:0, instance:com.dc.datacreator.tests.PerformanceTest@3cc1435c]">&lt;&lt;logout</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1646464088</td>   <td></td> </tr>
+<tr bgcolor="79a8a8">  <td>19/10/25 15:54:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PerformanceTest.passtest()[pri:1, instance:com.dc.datacreator.tests.PerformanceTest@3cc1435c]">passtest</td> 
+  <td>main@1646464088</td>   <td></td> </tr>
 </table>
