--- a/test-output/index.html
+++ b/test-output/index.html
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,7 +102,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.dc.datacreator.tests.PerformanceTest" class="method navigator-link" hash-for-method="passtest">passtest</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.dc.datacreator.tests.EventTest" class="method navigator-link" hash-for-method="eventNonWOTest">eventNonWOTest</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.dc.datacreator.tests.EventTest" class="method navigator-link" hash-for-method="eventTest">eventTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -120,16 +125,25 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.dc.datacreator.tests.PerformanceTest</span>
+              <span class="class-name">com.dc.datacreator.tests.EventTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="passtest">
-                  </a> <!-- passtest -->
-                  <span class="method-name">passtest</span>
+                  <a name="eventNonWOTest">
+                  </a> <!-- eventNonWOTest -->
+                  <span class="method-name">eventNonWOTest</span>
                   <em>
-(DCH_01: To filter based on priority and validate the assigned status of a wo)                  </em>
+(DCDATA_01: To create data)                  </em>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="eventTest">
+                  </a> <!-- eventTest -->
+                  <span class="method-name">eventTest</span>
+                  <em>
+(DCDATA_01: To create data)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -137,7 +151,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/private/var/folders/rh/71zzg9dj3tz7x_vn1q8kjt5r0000gn/T/testng-eclipse-677259166/testng-customsuite.xml</span>
+            <span class="header-content">/private/var/folders/rh/71zzg9dj3tz7x_vn1q8kjt5r0000gn/T/testng-eclipse--140715423/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -146,7 +160,7 @@
 &lt;suite thread-count=&quot;-1&quot; name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.dc.datacreator.tests.PerformanceTest&quot;/&gt;
+      &lt;class name=&quot;com.dc.datacreator.tests.EventTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -186,16 +200,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'passtest')
-data.setCell(0, 2, 'com.dc.datacreator.tests.PerformanceTest')
-data.setCell(0, 3, 22975);
+data.setCell(0, 1, 'eventTest')
+data.setCell(0, 2, 'com.dc.datacreator.tests.EventTest')
+data.setCell(0, 3, 3996397);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'eventNonWOTest')
+data.setCell(1, 2, 'com.dc.datacreator.tests.EventTest')
+data.setCell(1, 3, 779906);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 22 seconds</span>
+              <span class="suite-total-time">Total running time: 1 hours</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -221,35 +239,19 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.dc.datacreator.tests.PerformanceTest</div> <!-- chronological-class-name -->
-              <div class="configuration-test before">
-                <span class="method-name">launchBrowser</span>
-                <span class="method-start">0 ms</span>
-              </div> <!-- configuration-test before -->
+              <div class="chronological-class-name">com.dc.datacreator.tests.EventTest</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
-                <span class="method-name">login</span>
-                <span class="method-start">13345 ms</span>
+                <span class="method-name">initialization</span>
+                <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
-              <div class="configuration-method before">
-                <span class="method-name">baseStateHome</span>
-                <span class="method-start">42771 ms</span>
-              </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">passtest</span>
-                <span class="method-start">42771 ms</span>
+                <span class="method-name">eventTest</span>
+                <span class="method-start">2733 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">closeChildBrowser</span>
-                <span class="method-start">65749 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-class after">
-                <span class="method-name">logout</span>
-                <span class="method-start">65750 ms</span>
-              </div> <!-- configuration-class after -->
-              <div class="configuration-test after">
-                <span class="method-name">closeBrowser</span>
-                <span class="method-start">65752 ms</span>
-              </div> <!-- configuration-test after -->
+              <div class="test-method">
+                <span class="method-name">eventNonWOTest</span>
+                <span class="method-start">3999134 ms</span>
+              </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
