--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,18 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9fedbd">  <td>19/10/25 15:54:09</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BrowserLib.launchBrowser()[pri:0, instance:com.dc.datacreator.tests.PerformanceTest@3cc1435c]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1646464088</td>   <td></td> </tr>
-<tr bgcolor="77fd62">  <td>19/10/25 15:54:23</td>   <td>13341</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.login()[pri:0, instance:com.dc.datacreator.tests.PerformanceTest@3cc1435c]">&gt;&gt;login</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1646464088</td>   <td></td> </tr>
-<tr bgcolor="77fd62">  <td>19/10/25 15:54:52</td>   <td>42766</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.baseStateHome()[pri:0, instance:com.dc.datacreator.tests.PerformanceTest@3cc1435c]">&gt;&gt;baseStateHome</td> 
-<td>&nbsp;</td>  <td>main@1646464088</td>   <td></td> </tr>
-<tr bgcolor="79a8a8">  <td>19/10/25 15:54:52</td>   <td>42766</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PerformanceTest.passtest()[pri:1, instance:com.dc.datacreator.tests.PerformanceTest@3cc1435c]">passtest</td> 
-  <td>main@1646464088</td>   <td></td> </tr>
-<tr bgcolor="77fd62">  <td>19/10/25 15:55:15</td>   <td>65744</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.closeChildBrowser()[pri:0, instance:com.dc.datacreator.tests.PerformanceTest@3cc1435c]">&lt;&lt;closeChildBrowser</td> 
-<td>&nbsp;</td>  <td>main@1646464088</td>   <td></td> </tr>
-<tr bgcolor="77fd62">  <td>19/10/25 15:55:15</td>   <td>65745</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.logout()[pri:0, instance:com.dc.datacreator.tests.PerformanceTest@3cc1435c]">&lt;&lt;logout</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1646464088</td>   <td></td> </tr>
-<tr bgcolor="9fedbd">  <td>19/10/25 15:55:15</td>   <td>65747</td> <td>&nbsp;</td><td title="&lt;&lt;BrowserLib.closeBrowser()[pri:0, instance:com.dc.datacreator.tests.PerformanceTest@3cc1435c]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1646464088</td>   <td></td> </tr>
+<tr bgcolor="79a8a8">  <td>19/11/07 06:58:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EventTest.initialization()[pri:0, instance:com.dc.datacreator.tests.EventTest@60015ef5]">&gt;&gt;initialization</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1105322512</td>   <td></td> </tr>
+<tr bgcolor="79a8a8">  <td>19/11/07 06:58:11</td>   <td>2728</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EventTest.eventTest()[pri:0, instance:com.dc.datacreator.tests.EventTest@60015ef5]">eventTest</td> 
+  <td>main@1105322512</td>   <td></td> </tr>
+<tr bgcolor="79a8a8">  <td>19/11/07 08:04:48</td>   <td>3999129</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EventTest.eventNonWOTest()[pri:1, instance:com.dc.datacreator.tests.EventTest@60015ef5]">eventNonWOTest</td> 
+  <td>main@1105322512</td>   <td></td> </tr>
 </table>
