--- a/test-output/index.html
+++ b/test-output/index.html
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -100,11 +100,6 @@
                       <a href="#" panel-name="suite-Default_suite" class="show-methods passed suite-Default_suite"> (show)</a> <!-- show-methods passed suite-Default_suite -->
                     </span>
                     <div class="method-list-content passed suite-Default_suite">
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.dc.datacreator.tests.EventTest" class="method navigator-link" hash-for-method="eventNonWOTest">eventNonWOTest</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Default_suite" title="com.dc.datacreator.tests.EventTest" class="method navigator-link" hash-for-method="eventTest">eventTest</a> <!-- method navigator-link -->
@@ -130,15 +125,6 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="eventNonWOTest">
-                  </a> <!-- eventNonWOTest -->
-                  <span class="method-name">eventNonWOTest</span>
-                  <em>
-(DCDATA_01: To create data)                  </em>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
                   <a name="eventTest">
                   </a> <!-- eventTest -->
                   <span class="method-name">eventTest</span>
@@ -151,7 +137,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/private/var/folders/rh/71zzg9dj3tz7x_vn1q8kjt5r0000gn/T/testng-eclipse--140715423/testng-customsuite.xml</span>
+            <span class="header-content">/private/var/folders/rh/71zzg9dj3tz7x_vn1q8kjt5r0000gn/T/testng-eclipse-1623688479/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -200,20 +186,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'eventTest')
 data.setCell(0, 2, 'com.dc.datacreator.tests.EventTest')
-data.setCell(0, 3, 3996397);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'eventNonWOTest')
-data.setCell(1, 2, 'com.dc.datacreator.tests.EventTest')
-data.setCell(1, 3, 779906);
+data.setCell(0, 3, 15);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 hours</span>
+              <span class="suite-total-time">Total running time: 15 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -228,9 +210,16 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">0 ignored methods</span>
+            <span class="header-content">1 ignored method</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">com.dc.datacreator.tests.EventTest</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">eventNonWOTest</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Default_suite" class="panel">
@@ -246,11 +235,7 @@ return data;
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">eventTest</span>
-                <span class="method-start">2733 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">eventNonWOTest</span>
-                <span class="method-start">3999134 ms</span>
+                <span class="method-start">2111 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
