--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,2 +1,3 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>com.dc.datacreator.tests.EventTest.eventNonWOTest<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>DCDATA_01: To create data</i></td></tr>
 </table>
