--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="79a8a8">  <td>19/11/07 08:04:48</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EventTest.eventNonWOTest()[pri:1, instance:com.dc.datacreator.tests.EventTest@60015ef5]">eventNonWOTest</td> 
-  <td>main@1105322512</td>   <td></td> </tr>
-<tr bgcolor="79a8a8">  <td>19/11/07 06:58:11</td>   <td>-3996401</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EventTest.eventTest()[pri:0, instance:com.dc.datacreator.tests.EventTest@60015ef5]">eventTest</td> 
-  <td>main@1105322512</td>   <td></td> </tr>
-<tr bgcolor="79a8a8">  <td>19/11/07 06:58:08</td>   <td>-3999129</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EventTest.initialization()[pri:0, instance:com.dc.datacreator.tests.EventTest@60015ef5]">&gt;&gt;initialization</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1105322512</td>   <td></td> </tr>
+<tr bgcolor="79a8a8">  <td>19/11/26 13:00:09</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EventTest.eventTest()[pri:0, instance:com.dc.datacreator.tests.EventTest@60015ef5]">eventTest</td> 
+  <td>main@1768792843</td>   <td></td> </tr>
+<tr bgcolor="79a8a8">  <td>19/11/26 13:00:07</td>   <td>-2106</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;EventTest.initialization()[pri:0, instance:com.dc.datacreator.tests.EventTest@60015ef5]">&gt;&gt;initialization</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1768792843</td>   <td></td> </tr>
 </table>
